users controller & user repository
