# api/openapi-spec/openapi.yaml
@@ -14,15 +14,75 @@ servers:
 tags:
   - name: system
     description: System health operations
+  - name: users
+    description: Users use cases
 paths:
   /health:
     get:
       tags:
         - system
-      summary: Healthcheck
-      description: Get server health
       operationId: getHealth
+      summary: Health check
+      description: Checks the API itself and all critical dependencies (available under the port 8079 or HTTP_HEALTH_PORT  environment variable). For internal purposes
       x-internal: true
       responses:
-        '501':
-          description: Not Implemented
+        '200':
+          description: OK
+  /users:
+    get:
+      tags:
+        - users
+      operationId: getAllUsers
+      summary: Get all users
+      description: Retrieve all users from datasource
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+  '/users/{userId}':
+    get:
+      summary: Get user by id
+      tags:
+        - users
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '404':
+          description: Not Found
+        '500':
+          description: Internal Server Error
+      operationId: getUserById
+      description: Retrieve user information from ID
+    parameters:
+      - schema:
+          type: integer
+          exclusiveMinimum: true
+          minimum: 0
+        name: userId
+        in: path
+        required: true
+        description: Numeric ID of the user to get
+components:
+  schemas:
+    User:
+      title: User
+      x-stoplight:
+        id: e04lplqp2mw1t
+      type: object
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        firstname:
+          type: string
+      description: ''
